<resources>
    <string name="app_name" translatable="false">Money Tracker</string>

    <string name="settings">Settings</string>

    <string name="about">About</string>
    <string name="about_desc">Money Tracker - application for money tracking</string>
    <string name="about_developed_by" translatable="false">Developed by Anton Zinakov &amp; Vlad Bendezu</string>
    <string name="about_contact" translatable="false">email: ab.zinakov@yandex.ru</string>

    <string name="dashboard_total_balance">Total balance</string>
    <string name="categories">Categories</string>
    <string name="error_loadings_rates">Error while loading usdBasedRates!</string>
    <string name="no_network_connection">No network connection</string>

    <string name="good_morning">Good morning!</string>
    <string name="good_day">Good day!</string>
    <string name="good_evening">Good evening!</string>
    <string name="good_night">Good night!</string>

    <string name="total_expenses">Total Expenses</string>

    <string name="enter_sum">Enter sum</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="add_transaction">Add transaction</string>
    <string name="save">Save</string>
    <string name="incorrect_value">Incorrect value</string>
    <string name="repeat_transaction">Repeat Transaction</string>
    <string name="every">Every</string>
    <string name="amount">amount</string>

    <string name="bank_card">Bank Card</string>
    <string name="cash">Cash</string>

    <string name="car">Car</string>
    <string name="food">Food</string>
    <string name="clothes">Clothes</string>
    <string name="other">Other</string>

    <string name="primary_currency">Primary currency</string>
    <string name="secondary_currency">Secondary currency</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="stop_periodic">Stop all periodic transactions</string>
    <string name="stop_periodic_message">All periodic transactions are stoped</string>
    <string name="new_transaction">New transaction</string>
    <string name="add">Add</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="save_as_pattern">Save as pattern</string>
    <string name="patterns">Patterns</string>
    <string name="no_patterns_message">No patterns</string>
    <string name="phone">Phone</string>
    <string name="salary">Salary</string>
    <string name="bank">Bank</string>
    <string name="all_time">All time</string>
    <string name="add_account">Add account</string>
    <string name="account_name">Account name</string>
    <string name="select_icon">Select icon</string>
    <string name="no_transactions">No transactions</string>
    <string name="total_incomes">Total Incomes</string>
    <string name="edit">Edit</string>

</resources>
