<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/about"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:elevation="@dimen/toolbar_elevation"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="@dimen/half_offset"
        android:layout_marginLeft="@dimen/half_offset"
        android:layout_marginRight="@dimen/half_offset"
        android:layout_marginStart="@dimen/half_offset"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        style="@style/Text.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />
    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.Small.Secondary"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/offset"
        android:layout_marginLeft="@dimen/offset"
        android:layout_marginRight="@dimen/offset"
        android:layout_marginStart="@dimen/offset"
        android:layout_marginTop="@dimen/half_offset"
        android:lineSpacingExtra="4sp"
        android:text="@string/about_desc"
        android:textAlignment="center"
        style="@style/Text.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="@dimen/half_offset"
        android:layout_marginLeft="@dimen/half_offset"
        android:layout_marginRight="@dimen/half_offset"
        android:layout_marginStart="@dimen/half_offset"
        android:text="@string/about_developed_by"
        style="@style/Text.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/half_offset"
        android:layout_marginLeft="@dimen/half_offset"
        android:layout_marginRight="@dimen/half_offset"
        android:layout_marginStart="@dimen/half_offset"
        android:layout_marginTop="@dimen/half_offset"
        android:text="@string/about_contact"
        style="@style/Text.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        />
</android.support.constraint.ConstraintLayout>